--- a/net.vandut.agh.magisterka/pom.xml
+++ b/net.vandut.agh.magisterka/pom.xml
@@ -28,6 +28,7 @@
 	<module>service.proxy.remotecaller</module>
 	<module>door-status-dependency</module>
 	<module>door-status-caller</module>
+	<module>door-status-remotecaller</module>
   </modules>
 
   <repositories>
