--- a/net.vandut.agh.magisterka/pom.xml
+++ b/net.vandut.agh.magisterka/pom.xml
@@ -33,6 +33,7 @@
 	<module>temperature-sensor-dependency</module>
 	<module>temperature-sensor-remotecaller</module>
 	<module>logic</module>
+	<module>logic-client</module>
 	<module>missing-packages</module>
   </modules>
 
