Untested, but implemented logic-client (Swing buttons onClick works from Felix on this machine)

--- a/net.vandut.agh.magisterka/logic-client/pom.xml
+++ b/net.vandut.agh.magisterka/logic-client/pom.xml
@@ -100,7 +100,8 @@
 						*
 					</Import-Package>
 					<Private-Package>
-						net.vandut.agh.magisterka.logicclient
+						net.vandut.agh.magisterka.logicclient,
+						net.vandut.agh.magisterka.logicclient.handlers
 					</Private-Package>
                     <Export-Package>
                         hsoa_1,
