Sensors Java Client that tests connection to sensors

--- a/net.vandut.agh.magisterka/pom.xml
+++ b/net.vandut.agh.magisterka/pom.xml
@@ -35,6 +35,7 @@
 	<module>logic</module>
 	<module>logic-client</module>
 	<module>missing-packages</module>
+	<module>sensors-java-client</module>
   </modules>
 
   <repositories>
