--- a/net.vandut.agh.magisterka/proxy-creator/pom.xml
+++ b/net.vandut.agh.magisterka/proxy-creator/pom.xml
@@ -32,6 +32,12 @@
 			<artifactId>log4j</artifactId>
             <scope>provided</scope>
 		</dependency>
+		
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.1</version>
+		</dependency>
         
 		<dependency>
 			<groupId>org.apache.servicemix.bundles</groupId>
