cam-dependency, cam for logic, logic-client; Fixed bug in proxy-creator

--- a/net.vandut.agh.magisterka/logic-client/pom.xml
+++ b/net.vandut.agh.magisterka/logic-client/pom.xml
@@ -106,6 +106,7 @@
                     <Export-Package>
                         hsoa_1,
                         hsoa_2,
+                        cam,
                         net.vandut.agh.magisterka.logic.service
                     </Export-Package>
 					<Require-Bundle>org.eclipse.equinox.common</Require-Bundle>
