--- a/net.vandut.agh.magisterka/logic-client/pom.xml
+++ b/net.vandut.agh.magisterka/logic-client/pom.xml
@@ -106,6 +106,7 @@
                     <Export-Package>
                         hsoa_1,
                         hsoa_2,
+                        hsoa_3,
                         cam,
                         net.vandut.agh.magisterka.logic.service
                     </Export-Package>
