--- a/net.vandut.agh.magisterka/logic/pom.xml
+++ b/net.vandut.agh.magisterka/logic/pom.xml
@@ -98,21 +98,31 @@
     <build>
 	<plugins>
 		<plugin>
+			<artifactId>maven-compiler-plugin</artifactId>
+			<configuration>
+				<source>1.5</source>
+				<target>1.5</target>
+			</configuration>
+		</plugin>
+		<plugin>
 			<groupId>org.apache.cxf</groupId>
-			<artifactId>cxf-java2ws-plugin</artifactId>
-			<version>2.5.0.fuse-70-084</version>
+			<artifactId>cxf-codegen-plugin</artifactId>
 			<executions>
 				<execution>
-					<id>process-classes</id>
+					<phase>generate-sources</phase>
 					<configuration>
-						<className>net.vandut.agh.magisterka.logic.service.LogicService</className>
-						<genWsdl>true</genWsdl>
-						<verbose>true</verbose>
-						<outputFile>${project.build.directory}/../src/main/resources/LogicService.wsdl</outputFile>
+						<sourceRoot>${basedir}/target/jaxws</sourceRoot>
+						<wsdlOptions>
+							<wsdlOption>
+								<wsdl>${basedir}/src/main/resources/LogicService.wsdl</wsdl>
+								<extraargs>
+									<extraarg>-verbose</extraarg>
+								</extraargs>
+							</wsdlOption>
+						</wsdlOptions>
 					</configuration>
-					<phase>process-classes</phase>
 					<goals>
-						<goal>java2ws</goal>
+						<goal>wsdl2java</goal>
 					</goals>
 				</execution>
 			</executions>
@@ -152,13 +162,13 @@
 						org.apache.log4j,
 						*
 					</Import-Package>
-					<Private-Package>
+                    <Private-Package>
 						net.vandut.agh.magisterka.logic
-					</Private-Package>
+                    </Private-Package>
                     <Export-Package>
-                        net.vandut.agh.magisterka.logic.service
+						net.vandut.agh.magisterka.logic.service
                     </Export-Package>
-					<Require-Bundle>org.eclipse.equinox.common</Require-Bundle>
+					<Require-Bundle>org.eclipse.equinox.common,org.apache.cxf.bundle</Require-Bundle>
 				</instructions>
 			</configuration>
 		</plugin>
