Added Logic version of Web SOA

--- a/android-apps/fullapp_logic/AndroidManifest.xml
+++ b/android-apps/fullapp_logic/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="net.vandut.magisterka.fullapp"
+    package="net.vandut.magisterka.fullapp_logic"
     android:versionCode="1"
     android:versionName="1.0" >
 
