Android Logic in 2nd version of Web SOA app

--- a/android-apps/fullapp_logic/AndroidManifest.xml
+++ b/android-apps/fullapp_logic/AndroidManifest.xml
@@ -84,6 +84,7 @@
         </activity>
         
         <service android:name="net.vandut.magisterka.fullapp.KsoapService"></service>
+        <service android:name="net.vandut.magisterka.fullapp.LogicService" android:enabled="true"></service>
     </application>
 
 </manifest>
